--- a/week01/code-along-header/index.html
+++ b/week01/code-along-header/index.html
@@ -18,9 +18,26 @@
         <span>Sofia's Site Title</span>
         <button id="ham-btn" class="hamburger"></button>
     </header>
-    <nav></nav>
-    <main></main>
-    <footer></footer>
+    <nav id="nav-bar" class="navigation">
+        <ul>
+            <li class="current"><a href="#">News & Events</a></li>
+            <li><a href="#">Dedicated Temples</a></li>
+            <li><a href="#">Announced Temples</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h1>News & Events</h1>
+    </main>
+    <footer>
+        <div class="social-media">
+            <a href="#" target="_blank"><img src="images/github.svg" alt="GitHub Icon" width="16" height="16"></a>
+            <a href="#" target="_blank"><img src="images/linkedin.svg" alt="LinkedIn Icon" width="16" height="16"></a>
+            <a href="#" target="_blank"><img src="images/instagram.svg" alt="Instagram Icon" width="16" height="16"></a>
+            <a href="#" target="_blank"><img src="images/threads.svg" alt="Threads Icon" width="16" height="16"></a>
+        </div>
+        <p>© <span id="currentyear"></span> | Sofia Angela Suarez | Argentina</p>
+        <p id="lastModified"></p>
+    </footer>
     <script src="scripts/navigation.js"></script>
 </body>
 
