--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
         <img src="images/laptop.svg" alt="Site Logo" width="16" height="16">
         <span>Sofía Angela Suárez</span>
-        <button id="ham-btn" class="hamburger" aria-labelledby="menu"></button>
+        <button id="menu" class="hamburger" aria-labelledby="menu"></button>
     </header>
     <nav id="nav-bar" class="navigation">
         <ul>
