--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <meta name="description"
         content="Main page for assignments of the course WDD231 by the student Sofia Angela Suarez">
     <meta name="author" content="Sofia Angela Suarez">
+    <meta property="og.title" content="Sofia Suarez's Main Page">
+    <meta property="og.description" content="">
+    <meta property="og.image" content="">
+    <meta property="og.url" content="">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -16,6 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
+    <link rel="Icon" href="images/favicon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/course.js" defer></script>
