--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -42,8 +42,10 @@
     <main>
         <h1>Directory</h1>
         <div class="layout">
-            <button id="grid"><img src="images/grid-3x3-gap-fill.svg" alt=""></button>
-            <button id="list"><img src="images/list-ul.svg" alt=""></button>
+            <section class="buttons">
+                <button id="grid"><img src="images/grid-3x3-gap-fill.svg" alt=""></button>
+                <button id="list"><img src="images/list-ul.svg" alt=""></button>
+            </section>
             <article class="grid"></article>
         </div>
     </main>
