--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDP Chamber of Commerce - Directory</title>
-    <meta name="description" content="">
+    <meta name="description" content="The directory of this chamber of commerce, providing all the important information of the companies affiliates to us.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og.title" content="Mar del Plata Chamber of Commerce">
-    <meta property="og.description" content="">
-    <meta property="og.image" content="">
-    <meta property="og.url" content="https://sofiaas.github.io/wdd231/chamber/index.html">
+    <meta property="og:title" content="Mar del Plata Chamber of Commerce">
+    <meta property="og.description" content='The ideal website to find all the information about some of the most important companies in "La Feliz".'>
+    <meta property="og:image" content="https://www.canva.com/design/DAG-tKDRa2I/TyhL0PrczBQ1O-j1hlWMEA/view">
+    <meta property="og:url" content="https://sofiaas.github.io/wdd231/chamber/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/"> <!-- Create and add a favicon -->
+    <link rel="Icon" href="images/building-icon.ico"> <!-- Create and add a favicon -->
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/companies.js" defer></script>
@@ -43,15 +43,15 @@
         <h1>Directory</h1>
         <div class="layout">
             <section class="buttons">
-                <button id="grid"><img src="images/grid-3x3-gap-fill.svg" alt=""></button>
-                <button id="list"><img src="images/list-ul.svg" alt=""></button>
+                <button id="grid"><img src="images/grid-3x3-gap-fill.svg" alt="Grid icon"></button>
+                <button id="list"><img src="images/list-ul.svg" alt="List icon"></button>
             </section>
             <article class="grid"></article>
         </div>
     </main>
     <footer>
         <div class="info">
-            <h4>Mar del Plata Chamber of Commerce</h4>
+            <p class="title">Mar del Plata Chamber of Commerce</p>
             <p>20 de Septiembre 1234</p>
             <p>Mar del Plata, Buenos Aires, Argentina</p>
             <p>info@mdpcc.org</p>
