--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,9 +7,9 @@
     <title>MDP Chamber of Commerce - Directory</title>
     <meta name="description" content="The directory of this chamber of commerce, providing all the important information of the companies affiliates to us.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og:title" content="Mar del Plata Chamber of Commerce">
-    <meta property="og.description" content='The ideal website to find all the information about some of the most important companies in "La Feliz".'>
-    <meta property="og:image" content="https://www.canva.com/design/DAG-tKDRa2I/TyhL0PrczBQ1O-j1hlWMEA/view">
+    <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
+    <meta property="og:description" content='The ideal website to find all the information about some of the most important companies in "La Feliz".'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/chamber/images/Mar-del-Plata-Chamber-of-Commerce.png">
     <meta property="og:url" content="https://sofiaas.github.io/wdd231/chamber/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
