--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDP Chamber of Commerce - Home</title>
-    <meta name="description"
-        content="">
+    <meta name="description" content="">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
     <meta property="og:description"
@@ -25,7 +24,8 @@
     <link rel="Icon" href="images/building-icon.ico"> <!-- Create and add a favicon -->
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
-    <script src="scripts/companies.js" defer></script>
+    <script src="scripts/weather.js" defer></script>
+    <script src="scripts/forecast.js" defer></script>
 </head>
 
 <body>
@@ -35,22 +35,44 @@
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li><a href="#">Home</a></li>
-                <li class="current"><a href="directory.html">Directory</a></li>
+                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="#">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h1>Directory</h1>
-        <div class="layout">
-            <section class="buttons">
-                <button id="grid"><img src="images/grid-3x3-gap-fill.svg" alt="Grid icon"></button>
-                <button id="list"><img src="images/list-ul.svg" alt="List icon"></button>
-            </section>
-            <article class="grid"></article>
+        <div class="hero">
+            <picture>
+                <source media="(min-width: 1000px)" srcset="">
+                <source media="(min-width: 500px)" srcset="">
+                <img src="" alt="" width="" height="">
+            </picture>
+            <a href="">Join us!</a>
         </div>
+        <h1>Home</h1>
+        <div class="display">
+            <section>
+                <h2>Events</h2>
+            </section>
+            <section id="weather">
+                <h2>Current Weather</h2>
+                <img id="weather-icon" src="" alt="">
+            </section>
+            <section id="forecast">
+                <h2>Weather Forecast</h2>
+            </section>
+        </div>
+            <section class="card">
+                <h2>Business 1</h2>
+            </section>
+            <section class="card">
+                <h2>Business 2</h2>
+            </section>
+            <section class="card">
+                <h2>Business 3</h2>
+            </section>
     </main>
     <footer>
         <div class="info">
