w03 json file update

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -64,15 +64,7 @@
                 <h2>Weather Forecast</h2>
             </section>
         </div>
-            <section class="card">
-                <h2>Business 1</h2>
-            </section>
-            <section class="card">
-                <h2>Business 2</h2>
-            </section>
-            <section class="card">
-                <h2>Business 3</h2>
-            </section>
+        <div class="adds"></div>
     </main>
     <footer>
         <div class="info">
