w03 chamber landing page

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
     <meta property="og:description" content='The ideal website to find all the information about some of the most important companies in "La Feliz".'>
     <meta property="og:image" content="https://sofiaas784.github.io/wdd231/chamber/images/Mar-del-Plata-Chamber-of-Commerce.png">
-    <meta property="og:url" content="https://sofiaas.github.io/wdd231/chamber/index.html">
+    <meta property="og:url" content="https://sofiaas784.github.io/wdd231/chamber/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
