--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
         content='The ideal website to find all the information about some of the most important companies in "La Feliz".'>
     <meta property="og:image"
         content="https://sofiaas784.github.io/wdd231/chamber/images/Mar-del-Plata-Chamber-of-Commerce.png">
-    <meta property="og:url" content="https://sofiaas.github.io/wdd231/chamber/index.html">
+    <meta property="og:url" content="https://sofiaas784.github.io/wdd231/chamber/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
     <link rel="stylesheet" href="styles/larger.css">
@@ -26,6 +26,7 @@
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/weather.js" defer></script>
     <script src="scripts/forecast.js" defer></script>
+    <script src="scripts/advertisement.js" defer></script>
 </head>
 
 <body>
@@ -45,16 +46,17 @@
     <main>
         <div class="hero">
             <picture>
-                <source media="(min-width: 1000px)" srcset="">
-                <source media="(min-width: 500px)" srcset="">
-                <img src="" alt="" width="" height="">
+                <source media="(min-width: 1000px)" srcset="images/hero-image-medium.webp">
+                <source media="(min-width: 500px)" srcset="images/hero-image-medium.webp">
+                <img src="images/hero-image-small.webp" alt="A landscape of Mar del Plata" loading="lazy">
             </picture>
-            <a href="">Join us!</a>
+            <a href="#">Join us!</a>
         </div>
         <h1>Home</h1>
         <div class="display">
             <section>
                 <h2>Events</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum totam, ex nemo inventore aliquid qui numquam saepe ut recusandae reprehenderit doloremque! Adipisci cum reiciendis amet similique sunt. Mollitia, optio quisquam?</p>
             </section>
             <section id="weather">
                 <h2>Current Weather</h2>
