--- a/chamber/index.html
+++ b/chamber/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MDP Chamber of Commerce - Home</title>
-    <meta name="description" content="">
+    <meta name="description" content="Know more about the best chamber of commerce in Mar del Plata, with strong connections and a great environment.">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
     <meta property="og:description"
@@ -21,7 +21,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/building-icon.ico"> <!-- Create and add a favicon -->
+    <link rel="Icon" href="images/building-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/weather.js" defer></script>
@@ -45,6 +45,7 @@
     </header>
     <main>
         <div class="hero">
+            <h1>The ideal place to connect with other companies</h1>
             <picture>
                 <source media="(min-width: 1000px)" srcset="images/hero-image-medium.webp">
                 <source media="(min-width: 500px)" srcset="images/hero-image-medium.webp">
