--- a/chamber/index.html
+++ b/chamber/index.html
@@ -45,7 +45,7 @@
     </header>
     <main>
         <div class="hero">
-            <h1>The ideal place to connect with other companies</h1>
+            <span>The ideal place to connect with other companies</span>
             <picture>
                 <source media="(min-width: 1000px)" srcset="images/hero-image-medium.webp">
                 <source media="(min-width: 500px)" srcset="images/hero-image-medium.webp">
@@ -61,7 +61,7 @@
             </section>
             <section id="weather">
                 <h2>Current Weather</h2>
-                <img id="weather-icon" src="" alt="">
+                <img id="weather-icon">
             </section>
             <section id="forecast">
                 <h2>Weather Forecast</h2>
