w04 join us page

--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDP Chamber of Commerce - Home</title>
-    <meta name="description" content="Know more about the best chamber of commerce in Mar del Plata, with strong connections and a great environment.">
+    <title>MDP Chamber of Commerce - Join Us</title>
+    <meta name="description" content="Confirmation of the registration for accept to be part of MDP Chamber of Commerce.">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
     <meta property="og:description"
@@ -24,9 +24,7 @@
     <link rel="Icon" href="images/building-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
-    <script src="scripts/weather.js" defer></script>
-    <script src="scripts/forecast.js" defer></script>
-    <script src="scripts/advertisement.js" defer></script>
+    <script src="scripts/form.js" defer></script>
 </head>
 
 <body>
@@ -36,37 +34,16 @@
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
-                <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
-                <li><a href="join.html">Join</a></li>
+                <li class="current"><a href="join.html">Join</a></li>
                 <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <div class="hero">
-            <span>The ideal place to connect with other companies</span>
-            <picture>
-                <source media="(min-width: 1000px)" srcset="images/hero-image-medium.webp">
-                <source media="(min-width: 500px)" srcset="images/hero-image-medium.webp">
-                <img src="images/hero-image-small.webp" alt="A landscape of Mar del Plata" loading="lazy">
-            </picture>
-            <a href="join.html">Join us!</a>
-        </div>
-        <h1>Home</h1>
-        <div class="display">
-            <section>
-                <h2>Events</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum totam, ex nemo inventore aliquid qui numquam saepe ut recusandae reprehenderit doloremque! Adipisci cum reiciendis amet similique sunt. Mollitia, optio quisquam?</p>
-            </section>
-            <section id="weather">
-                <h2>Current Weather</h2>
-            </section>
-            <section id="forecast">
-                <h2>Weather Forecast</h2>
-            </section>
-        </div>
-        <div class="adds"></div>
+        <h1>Join - Registration Status</h1>
+        <div id="results"></div>
     </main>
     <footer>
         <div class="info">
