--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             <div id="courses">
             </div>
         </section>
+        <dialog id="course-details"></dialog>
     </main>
     <footer>
         <div class="social-media">
