--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -19,7 +19,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/building-icon.ico"> <!-- Create and add a favicon -->
+    <link rel="Icon" href="images/building-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/companies.js" defer></script>
@@ -34,8 +34,8 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li class="current"><a href="directory.html">Directory</a></li>
-                <li><a href="#">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="join.html">Join</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
