--- a/chamber/join.html
+++ b/chamber/join.html
@@ -53,12 +53,12 @@
                             autocomplete="given-name"></label>
                     <label>Last Name<input type="text" name="last" required title="Your Last Name"
                             autocomplete="family-name"></label>
-                    <label>Organizational Title<input type="text" name="title" required title="Your Organizational Title"
+                    <label>Organization Title<input type="text" name="title" required title="Your Organizational Title"
                             autocomplete="organization-title"></label>
                     <label>Email<input type="email" name="email" required title="Your Personal Email" autocomplete="email"
                             placeholder="example@gmail.com"></label>
                     <label>Phone Number<input type="tel" name="phone" required title="Your Personal Phone Number"
-                            autocomplete="tel-national"></label>
+                            autocomplete="tel"></label>
                 </fieldset>
                 <fieldset>
                     <legend>Business Information</legend>
