--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MDP Chamber of Commerce - Join Us</title>
+    <title>MDP Chamber of Commerce - Discover</title>
     <meta name="description" content="">
     <meta name="author" content="Sofia Angela Suarez">
     <meta property="og:title" content="Mar del Plata Chamber of Commerce - The ideal site for your company">
