--- a/chamber/index.html
+++ b/chamber/index.html
@@ -33,7 +33,7 @@
     <header>
         <img src="images/buildings.svg" alt="Site Logo" width="44" height="44">
         <span>Mar del Plata Chamber of Commerce</span>
-        <button id="menu" class="hamburger" aria-labelledby="menu"></button>
+        <button id="menu" class="hamburger" aria-label="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li class="current"><a href="index.html">Home</a></li>
