--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -31,7 +31,7 @@
     <header>
         <img src="images/buildings.svg" alt="Site Logo" width="44" height="44">
         <span>Mar del Plata Chamber of Commerce</span>
-        <button id="menu" class="hamburger" aria-labelledby="menu"></button>
+        <button id="menu" class="hamburger" aria-label="menu"></button>
         <nav id="nav-bar" class="navigation">
             <ul>
                 <li><a href="index.html">Home</a></li>
