--- a/final/activities.html
+++ b/final/activities.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YSA Center — Mar del Plata</title>
-    <meta name="description" content="">
+    <title>YSA Center MPD — Activities</title>
+    <meta name="description" content="The information of all of our current and weekly activities as well as the events and invitations made by other young adults.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og:title" content="">
-    <meta property="og:description" content=''>
-    <meta property="og:image" content="">
+    <meta property="og:title" content="YSA Center — Mar del Plata">
+    <meta property="og:description"
+        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. You are welcome to come to our activities and learn more with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/YSA.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -19,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/">
+    <link rel="Icon" href="images/ysa-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/activities.js" defer></script>
@@ -27,7 +28,7 @@
 
 <body>
     <header>
-        <img src="images/" alt="Site Logo" width="16" height="16">
+        <img src="images/YSA-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
@@ -44,7 +45,8 @@
         <p>Do you want to deepen your knowledge of the gospel? Come to one of our inspired and selected courses</p>
         <div class="cards" id="courses"></div>
         <h2>The workshops</h2>
-        <p>If you are looking to develop a new skill or just a hobby, look at these options to learn all together. Invite a friend to come!
+        <p>If you are looking to develop a new skill or just a hobby, look at these options to learn all together.
+            Invite a friend to come!
         </p>
         <div class="cards" id="workshops"></div>
         <h2>Devotionals</h2>
@@ -53,6 +55,7 @@
         <h2>Ward Activities</h2>
         <p>Finally, but not less important: the upcoming section to post whatever activity you want for all of us to
             be. Just use the link a invite us!</p>
+        <h2 class="soon">Coming Soon!</h2>
     </main>
     <footer>
         <div class="social-media">
