--- a/final/index.html
+++ b/final/index.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>YSA Center — Mar del Plata</title>
-    <meta name="description" content="">
+    <meta name="description"
+        content="The main site of the YSA Center of Mar del Plata, where you can find all the information of our group and how to find us.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og:title" content="">
-    <meta property="og:description" content=''>
-    <meta property="og:image" content="">
+    <meta property="og:title" content="YSA Center — Mar del Plata">
+    <meta property="og:description"
+        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. You are welcome to come to our activities and learn more with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/YSA.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -19,14 +21,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/">
+    <link rel="Icon" href="images/ysa-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
 </head>
 
 <body>
     <header>
-        <img src="images/" alt="Site Logo" width="16" height="16">
+        <img src="images/YSA-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
@@ -48,22 +50,39 @@
             <a href="share.html">Join us!</a>
         </div>
         <h1>Home</h1>
-        <div class="calendar">
-        </div>
-        <div>
-            <h2>Upcoming Activities</h2>
-            <ul class="carousel">
-                <li data-accName="Item 1"><img src="images/add-dev-bedregal.webp" alt="Devotional by President Oaks"></li>
-                <li data-accName="Item 2"><img src="images/add-dev-oaks.webp" alt="Devotional by Elder Bedregal"></li>
-                <li data-accName="Item 3"><img src="images/add-pfjas.webp" alt="FSYSA Conference"></li>
-            </ul>
+        <div class="layout">
+            <div class="adds">
+                <h2>Announcements</h2>
+                <p>▷ The guitar and singing classes will officially starts on Wednesday February 18th</p>
+                <p>▷ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reiciendis odio, sed dolorem
+                    commodi</p>
+                <p>▷ Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti reiciendis odio, sed dolorem
+                    commodi</p>
+            </div>
+            <div class="calendar">
+                <h2>Calendar</h2>
+                <p>Feb 13 | YSA Devotional by Elder Bedregal</p>
+                <p>Feb 27-28 | Mar del Plata North Stake Temple Trip</p>
+                <p>Mar 10 | Volley Tournament</p>
+                <p>Mar 14 | YSA Dance</p>
+            </div>
+            <div class="next">
+                <h2>Upcoming Activities</h2>
+                <ul class="carousel">
+                    <li data-accName="Item 1"><img src="images/add-dev-bedregal.webp"
+                            alt="Devotional by President Oaks"></li>
+                    <li data-accName="Item 2"><img src="images/add-dev-oaks.webp" alt="Devotional by Elder Bedregal">
+                    </li>
+                    <li data-accName="Item 3"><img src="images/add-pfjas.webp" alt="FSYSA Conference"></li>
+                </ul>
+            </div>
         </div>
         <section class="location">
-            <a href="https://maps.app.goo.gl/KC719kcXd2TJWS3t7" target="_blank"><img src="images/mdp-church-small.webp" alt="A local LDS church"></a>
+            <a href="https://maps.app.goo.gl/KC719kcXd2TJWS3t7" target="_blank"><img src="images/mdp-church-small.webp"
+                    alt="A local LDS church"></a>
             <h2>YSA Center Location</h2>
             <address>3944 San Luis, Mar del Plata, Buenos Aires Province, Argentina</address>
-            <p>Open every Tuesday from 6:30 to 9PM</p>
-            <p>Open every Wednesday from 6:30 to 10:30PM</p>
+            <p>Open every Tuesday from 6:30 to 9PM and every Wednesday from 6:30 to 10:30PM</p>
         </section>
     </main>
     <footer>
