--- a/final/share.html
+++ b/final/share.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YSA Center — Mar del Plata</title>
-    <meta name="description" content="">
+    <title>YSA Center MPD — Share & Connect</title>
+    <meta name="description" content="A space to share your ideas and your opinion with us, to keep building this center all together.">
     <meta name="author" content="Sofia Angela Suarez">
-    <meta property="og:title" content="">
-    <meta property="og:description" content=''>
-    <meta property="og:image" content="">
+    <meta property="og:title" content="YSA Center — Mar del Plata">
+    <meta property="og:description"
+        content='We are a group of young single adults from 18 to 35 that is inviting people to come and see our social and spiritual environment. You are welcome to come to our activities and learn more with us!'>
+    <meta property="og:image" content="https://sofiaas784.github.io/wdd231/final/images/YSA.png">
     <meta property="og:url" content="https://sofiaas784.github.io/wdd231/final/index.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/small.css">
@@ -19,7 +20,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=TASA+Explorer:wght@400..800&family=TikTok+Sans:opsz,wght@12..36,300..900&display=swap"
         rel="stylesheet">
-    <link rel="Icon" href="images/">
+    <link rel="Icon" href="images/ysa-icon.ico">
     <script src="scripts/date.js" defer></script>
     <script src="scripts/navigation.js" defer></script>
     <script src="scripts/questions.js" defer></script>
@@ -29,7 +30,7 @@
 
 <body>
     <header>
-        <img src="images/" alt="Site Logo" width="16" height="16">
+        <img src="images/YSA-logo.png" alt="Site Logo" width="16" height="16">
         <span>Mar del Plata YSA Center</span>
         <button id="menu" class="hamburger" aria-labelledby="menu"></button>
         <nav id="nav-bar" class="navigation">
@@ -58,6 +59,7 @@
                 </fieldset>
                 <fieldset>
                     <legend>Share your ideas</legend>
+                    <label>Title<input type="text" name="title" required title="The Idea Title" minlength="7" pattern="[a-zA-Z\s\-]{7,}"></label>
                     <label>Topic
                         <select name="topic" required>
                             <option value="" selected disabled>Choose one of the following...</option>
@@ -76,7 +78,7 @@
             <div class="cards" id="set"></div>
             <dialog id="ideas"></dialog>
         </div>
-        <h2>Connect with others like you</h2>
+        <!-- <h2>Connect with others like you</h2>
         <section class="cards">
             <h3>Join our WhatsApp Community</h3>
         </section>
@@ -92,7 +94,7 @@
                 <li><strong>If you came from the center:</strong></li>
             </ul>
         </section>
-        <p></p>
+        <p></p> -->
         <section>
             <h3>» Common Questions «</h3>
             <button class="collapsible"><img src="images/arrow-down.svg" alt="An arrow down" loading="lazy">Are there another day I can go to the YSA Center?</button>
